feat: IMplement stock prices
